--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
   },
   "dependencies": {
